# axon-control

./: README.md  app.json  package-lock.json  package.json
app/: _layout.tsx  index.tsx
app/(tabs)/: _layout.tsx  control.tsx  dashboard.tsx  devices.tsx  diagnostics.tsx  schedules.tsx
app/device/: add.tsx
docs/: correcao-capabilities-dinamicas.md  correcao-rotinas-schedules.md  manual-do-aplicativo.md  protocol-overview.md
docs/protocol-json/: README.md  capabilities.example.json  command.power-off.example.json  command.power-on.example.json  command.pump-off.example.json  command.pump-on.example.json  command.set-frequency.example.json  command.start-drain.example.json  command.swing-off.example.json  command.swing-on.example.json  errors.example.json  events.example.json  schedules.example.json  state.example.json  status.example.json
firmware/ihm-esp32/: CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.esp32-s3-devkitc-1
firmware/ihm-esp32/src/: CMakeLists.txt  app_state.c  capabilities.c  commands.c  device_state.c  diagnostics.c  local_server.c  main.c  mqtt_manager.c  ota.c  protocol.c  protocol_json.c  protocol_topics.c  rs485_bridge.c  schedules.c  storage.c  wifi_manager.c
src/components/: action-button.tsx  adaptive-tab-bar.tsx  empty-state.tsx  field.tsx  frequency-slider.tsx  info-pair.tsx  inline-notice.tsx  loading-state.tsx  page-header.tsx  screen.tsx  segmented-control.tsx  status-badge.tsx  surface-card.tsx
src/mocks/: defaults.ts
src/protocol/: commandTypes.ts  common.ts  deviceCapabilities.ts  (+8 more)
(+54 files in other folders)
